--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,2 +1,7 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
+
+section[epub|type~="dedication"] p {
+	text-align: right;
+	margin-top: 3em;
+}
