--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,7 +1,14 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
+section[epub|type~="dedication"] {
+   max-width: 20em;
+   margin-left: auto;
+   margin-right: auto;
+}
+
 section[epub|type~="dedication"] p{
 	margin-top: 3em;
 	text-align: right;
+	line-height: 1.67em;
 }
