use sentence case and CSS small caps for dedication

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -23,3 +23,7 @@ section[epub|type~="dedication"] p{
 	margin-top: 3em;
 	text-align: right;
 }
+
+section[epub|type~="dedication"] b[epub|type~="z3998:personal-name"]{
+	font-variant:small-caps;
+}
