Tweak dedication CSS

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -1,29 +1,52 @@
 @charset "utf-8";
 @namespace epub "http://www.idpf.org/2007/ops";
 
-section[epub|type~="dedication"]{
-	margin-left: auto;
-	margin-right: auto;
-	max-width: 20em;
-}
-
-/* Align right edge to diagonal. Works in Kobo and Calibre, ignored by Kindle. */
-section[epub|type~="dedication"] p::before{
-	clip-path: polygon(100% 0, 100% 100%, 0 100%);
-	content: "";
-	display: block;
-	float: right;
-	height: 12em;
-	shape-outside: polygon(100% 0, 100% 100%, 0 100%);
-	width: 4em;
-}
-
 section[epub|type~="dedication"] p{
-	line-height: 1.67;
-	margin-top: 3em;
-	text-align: right;
+	font-style: italic;
+	text-align: center;
 }
 
-section[epub|type~="dedication"] b[epub|type~="z3998:personal-name"]{
-	font-variant: small-caps;
+/* Centered dedications */
+section[epub|type~="dedication"]{
+	text-align: center;
+}
+
+section[epub|type~="dedication"] > *{
+	display: inline-block;
+	margin: auto;
+	margin-top: 3em;
+	max-width: 80%;
+}
+
+@supports(display: flex){
+	section[epub|type~="dedication"]{
+		align-items: center;
+		box-sizing: border-box;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		min-height: calc(98vh - 3em);
+		padding-top: 3em;
+	}
+
+	section[epub|type~="dedication"] > *{
+		margin: 0;
+	}
+}
+/* End centered dedications */
+
+@supports(shape-outside: polygon(100% 0, 100% 100%, 0 100%)){
+	/* Align right edge to diagonal. Works in Kobo and Calibre, ignored by Kindle. */
+	section[epub|type~="dedication"] p::before{
+		content: "";
+		display: block;
+		float: right;
+		height: 12em;
+		shape-outside: polygon(100% 0, 100% 100%, 0 100%);
+		width: 4em;
+	}
+
+	section[epub|type~="dedication"] p{
+		text-align: right;
+	}
 }
